--- a/docs/feui/guide/component/actionsheet.html
+++ b/docs/feui/guide/component/actionsheet.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -645,7 +659,7 @@
 <tr>
 <td>on-click-menu-{menuKey}</td>
 <td><code>menuKey</code></td>
-<td>点击事件的快捷方式, menuKey与label的值有关，<br>详见下面<strong>menus的说明</strong></td>
+<td>点击事件的快捷方式, menuKey与label的值有关，<br>详见下面<strong>↓↓menus的说明↓↓</strong></td>
 <td>-</td>
 </tr>
 </tbody>
