--- a/docs/feui/guide/component/address.html
+++ b/docs/feui/guide/component/address.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -628,6 +642,13 @@
 <td>-</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
@@ -641,7 +662,12 @@
 <tbody>
 <tr>
 <td>title</td>
-<td>title 插槽，可以使用它来添加<code>icon</code>等自定义样式，受控于<code>fe-group</code>需要从<code>scope</code>里继承<code>class</code>和样式</td>
+<td>title 插槽，可以使用它来添加<code>icon</code>等自定义样式，<br>受控于<code>fe-group</code>需要从<code>scope</code>里继承<code>class</code>和样式</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -672,6 +698,12 @@
 <td>on-shadow-change</td>
 <td>Array ids, Array names</td>
 <td>picker 值变化时触发，即滑动 picker 时触发</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
