--- a/docs/feui/guide/component/cell.html
+++ b/docs/feui/guide/component/cell.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -648,6 +662,13 @@
 <td><code>center</code></td>
 <td>参见<code>align-items</code><a href="http://www.runoob.com/cssref/css3-pr-align-items.html" target="_blank" rel="external">可选值</a></td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -682,12 +703,17 @@
 </tr>
 <tr>
 <td>inline-desc</td>
-<td><code>inline-desc</code> 内容，和 <code>prop:inline-desc</code> 功能一样，但是可以使用<code>html</code></td>
+<td><code>inline-desc</code> 内容，和 <code>prop:inline-desc</code><br>功能一样，但是可以使用<code>html</code></td>
 <td>-</td>
 </tr>
 <tr>
 <td>title</td>
 <td><code>title</code> 插槽，方便自定义样式</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
