--- a/docs/feui/guide/component/checkicon.html
+++ b/docs/feui/guide/component/checkicon.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -580,6 +594,13 @@
 <td><code>Boolean</code></td>
 <td><code>false</code></td>
 <td><code>true</code>,<code>false</code></td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
 </tbody>
 </table>
