--- a/docs/feui/guide/component/countup.html
+++ b/docs/feui/guide/component/countup.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -590,6 +604,13 @@
 <td><code>0</code></td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -653,6 +674,13 @@
 <td>-</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -677,6 +705,12 @@
 <td>-</td>
 <td>复位/复原/福元</td>
 <td>没错就是福元怎么了</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 </tr>
 </tbody>
 </table>
