--- a/docs/feui/guide/component/flexbox.html
+++ b/docs/feui/guide/component/flexbox.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -609,6 +623,13 @@
 <td>-</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
@@ -623,6 +644,11 @@
 <tr>
 <td>default</td>
 <td>flexbox-item的内容插槽</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -652,6 +678,13 @@
 <td><code>8</code></td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Slots-1"><a href="#Slots-1" class="headerlink" title="Slots"></a>Slots</h3><table>
@@ -666,6 +699,11 @@
 <tr>
 <td>default</td>
 <td>内容插槽</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
