--- a/docs/feui/guide/component/header.html
+++ b/docs/feui/guide/component/header.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -601,6 +615,13 @@
 <td><code>false</code></td>
 <td><code>false</code>,<code>true</code></td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
@@ -637,6 +658,11 @@
 <td>标题插槽</td>
 <td>用于自定义标题位置内容</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Events"><a href="#Events" class="headerlink" title="Events"></a>Events</h3><table>
@@ -665,6 +691,12 @@
 <td>on-click-title</td>
 <td>-</td>
 <td>点击标题时候触发</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
