--- a/docs/feui/guide/component/noticebar.html
+++ b/docs/feui/guide/component/noticebar.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -618,6 +632,13 @@
 <td><code>50</code></td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Events"><a href="#Events" class="headerlink" title="Events"></a>Events</h3><table>
@@ -636,6 +657,11 @@
 <td>通知栏点击事件</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 
@@ -645,6 +671,8 @@
         
           <span>← <a href="/docs/feui/guide/component/lazyload.html">Lazyload 懒加载</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/pullrefresh.html">Pullrefresh 刷新加载</a> →</span>
         
       </div>
     
