--- a/docs/feui/guide/component/pullrefresh.html
+++ b/docs/feui/guide/component/pullrefresh.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -544,13 +558,17 @@
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/pullrefresh">Live Demo&gt;&gt;</a></p>
 <h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><blockquote>
-<p>该组件目前已经升级为<code>Scroll</code>,请移步<a href="https://feui.gitee.io/#/Scroll">Scroll</a></p>
+<p>该组件目前已经升级为<code>Scroll</code>,请移步<a href="https://feui.gitee.io/docs/feui/guide/component/scroll.html">Scroll</a></p>
 </blockquote>
 
     </div>
     
       <div class="guide-links">
         
+          <span>← <a href="/docs/feui/guide/component/noticebar.html">NoticeBar 通知栏</a></span>
+        
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/radio.html">Radio 单选按钮</a> →</span>
         
       </div>
     
