--- a/docs/feui/guide/component/radio.html
+++ b/docs/feui/guide/component/radio.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>快速上手 — Feui</title>
+    <title>Radio 单选按钮 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -81,7 +81,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/quickstart.html" class="sidebar-link current">快速上手</a>
+      <a href="/docs/feui/guide/quickstart.html" class="sidebar-link">快速上手</a>
     </li>
   
     
@@ -507,7 +507,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link current new">Radio 单选按钮</a>
     </li>
   
     
@@ -550,38 +550,118 @@
 
 
 
-<div  id='content' class="content guide with-sidebar quickstart-guide">
+<div  id='content' class="content guide with-sidebar radio-guide">
   <div class='content_box'>
     
-      <h1>快速上手</h1>
+      <h1>Radio 单选按钮</h1>
     
     <div id='pContent'>
-      <h2 id="Feui"><a href="#Feui" class="headerlink" title="Feui"></a>Feui</h2><p><strong>Feui</strong> 是爱信诺移动组基于<code>WeUI</code>、<code>nuim</code>和<code>Vue(2.x)</code>开发的移动端 UI 组件库，希望借此提高组件价值，减轻工作量，更好的享受生活，享受工作。</p>
-<h3 id="安装"><a href="#安装" class="headerlink" title="安装"></a>安装</h3><figure class="highlight shell"><table><tr><td class="code"><pre><div class="line">npm i feui --save-dev</div></pre></td></tr></table></figure>
-<h3 id="引入组件"><a href="#引入组件" class="headerlink" title="引入组件"></a>引入组件</h3><h4 id="No-1-使用-babel-plugin-import-推荐"><a href="#No-1-使用-babel-plugin-import-推荐" class="headerlink" title="No.1 : 使用  babel-plugin-import (推荐)"></a>No.1 : 使用  <a href="https://github.com/ant-design/babel-plugin-import" target="_blank" rel="external">babel-plugin-import</a> (推荐)</h4><figure class="highlight bash"><table><tr><td class="code"><pre><div class="line"><span class="comment"># 安装 babel-plugin-import 插件</span></div><div class="line">npm i babel-plugin-import --save-dev</div></pre></td></tr></table></figure>
-<figure class="highlight js"><table><tr><td class="code"><pre><div class="line"><span class="comment">// 在 .babelrc 或 babel-loader 中添加插件配置</span></div><div class="line">&#123;</div><div class="line">  <span class="string">"plugins"</span>: [</div><div class="line">    [<span class="string">"import"</span>, &#123; <span class="string">"libraryName"</span>: <span class="string">"feui"</span>, <span class="string">"style"</span>: <span class="literal">true</span> &#125;]</div><div class="line">  ]</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<p>接着你可以在代码中直接引入 feui 组件，插件会自动将代码转化为 No.2 的按需引入形式。</p>
-<figure class="highlight js"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Button &#125; <span class="keyword">from</span> <span class="string">"feui"</span>;</div><div class="line"><span class="keyword">export</span> <span class="keyword">default</span> &#123;</div><div class="line">  components: &#123;</div><div class="line">    [Button.name]: Button</div><div class="line">  &#125;</div><div class="line">&#125;;</div></pre></td></tr></table></figure>
-<h4 id="No-2-按需引入组件"><a href="#No-2-按需引入组件" class="headerlink" title="No.2 : 按需引入组件"></a>No.2 : 按需引入组件</h4><figure class="highlight js"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Button &#125; <span class="keyword">from</span> <span class="string">"feui/lib/button"</span>;</div><div class="line"><span class="keyword">import</span> <span class="string">"feui/lib/feui-css/base.css"</span>;</div><div class="line"><span class="keyword">import</span> <span class="string">"feui/lib/feui-css/button.css"</span>;</div></pre></td></tr></table></figure>
-<h4 id="No-3-导入所有组件"><a href="#No-3-导入所有组件" class="headerlink" title="No.3 : 导入所有组件"></a>No.3 : 导入所有组件</h4><figure class="highlight js"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> Vue <span class="keyword">from</span> <span class="string">"vue"</span>;</div><div class="line"><span class="keyword">import</span> feui <span class="keyword">from</span> <span class="string">"feui"</span>;</div><div class="line"><span class="keyword">import</span> <span class="string">"feui/lib/feui-css/index.css"</span>;</div><div class="line"></div><div class="line">Vue.use(feui);</div></pre></td></tr></table></figure>
-<h3 id="CDN"><a href="#CDN" class="headerlink" title="CDN"></a>CDN</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="comment">&lt;!-- 引入样式 --&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">link</span> <span class="attr">rel</span>=<span class="string">"stylesheet"</span> <span class="attr">href</span>=<span class="string">"https://unpkg.com/feui/lib/feui-css/index.css"</span>&gt;</span></div><div class="line"></div><div class="line"><span class="comment">&lt;!-- 引入组件 --&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">script</span> <span class="attr">src</span>=<span class="string">"https://unpkg.com/feui/lib/feui.min.js"</span>&gt;</span><span class="undefined"></span><span class="tag">&lt;/<span class="name">script</span>&gt;</span></div></pre></td></tr></table></figure>
-<h3 id="vue-cli-脚手架-feui-cli"><a href="#vue-cli-脚手架-feui-cli" class="headerlink" title="vue-cli 脚手架 feui-cli"></a>vue-cli 脚手架 <a href="https://github.com/zoeblow/feui-cli" target="_blank" rel="external">feui-cli</a></h3><p>可以使用<code>vue-cli</code>的定义脚手架来初始化<code>feui</code>：</p>
-<figure class="highlight html"><table><tr><td class="code"><pre><div class="line">vue init zoeblow/feui-cli projectName</div></pre></td></tr></table></figure>
+      <p><a href="https://feui.gitee.io/#/radio">Live Demo&gt;&gt;</a></p>
+<blockquote>
+<p><code>fe-count</code> 请在<code>fe-group</code>中使用。</p>
+</blockquote>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Radio &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line">components: &#123;</div><div class="line">  [Radio.name]: Radio</div><div class="line">&#125;,</div><div class="line">data() &#123;</div><div class="line">  <span class="keyword">return</span> &#123;</div><div class="line">    radio001: [<span class="string">"安徽"</span>, <span class="string">"北京"</span>],</div><div class="line">    radio001Value: <span class="string">"安徽"</span>,</div><div class="line">    radio002Value: <span class="string">"北京"</span>,</div><div class="line">    radio003: [</div><div class="line">      &#123; <span class="attr">icon</span>: <span class="string">"http://temp.im/50x50/f17c67/fff"</span>, <span class="attr">key</span>: <span class="string">"001"</span>, <span class="attr">value</span>: <span class="string">"珊瑚朱"</span>&#125;,</div><div class="line">      &#123; <span class="attr">icon</span>: <span class="string">"http://temp.im/50x50/008573/fff"</span>, <span class="attr">key</span>: <span class="string">"002"</span>, <span class="attr">value</span>: <span class="string">"松石绿"</span>&#125;,</div><div class="line">      &#123; <span class="attr">icon</span>: <span class="string">"http://temp.im/50x50/228fbd/fff"</span>, <span class="attr">key</span>: <span class="string">"003"</span>, <span class="attr">value</span>: <span class="string">"浅缥色"</span>&#125;</div><div class="line">    ],</div><div class="line">    ],</div><div class="line">    selected: &#123; <span class="attr">color</span>: <span class="string">"#4a90e2"</span> &#125;</div><div class="line">  &#125;;</div><div class="line">&#125;,</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"基本用法"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-radio</span> <span class="attr">:options</span>=<span class="string">"radio001"</span> @<span class="attr">on-change</span>=<span class="string">"change"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-radio</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="默认选择、不可用"><a href="#默认选择、不可用" class="headerlink" title="默认选择、不可用"></a>默认选择、不可用</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"选中的 '安徽'"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-radio</span> <span class="attr">:options</span>=<span class="string">"radio001"</span> <span class="attr">value</span>=<span class="string">"安徽"</span> <span class="attr">disabled</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-radio</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="自定义选中颜色"><a href="#自定义选中颜色" class="headerlink" title="自定义选中颜色"></a>自定义选中颜色</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">:title</span>=<span class="string">"'已填充选中颜色 '+radio001Value"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-radio</span> <span class="attr">fill-mode</span> <span class="attr">:options</span>=<span class="string">"radio001"</span> <span class="attr">v-model</span>=<span class="string">"radio001Value"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:selected-label-style</span>=<span class="string">"selected"</span>  @<span class="attr">on-change</span>=<span class="string">"change"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-radio</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="自定义占位符和标签"><a href="#自定义占位符和标签" class="headerlink" title="自定义占位符和标签"></a>自定义占位符和标签</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"自定义占位符和标签"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-radio</span> <span class="attr">fill-mode</span> <span class="attr">fill-label</span>=<span class="string">"Other"</span> <span class="attr">fill-placeholder</span>=<span class="string">"填写其他的哦"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:options</span>=<span class="string">"radio001"</span> @<span class="attr">on-change</span>=<span class="string">"change"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-radio</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="自定义占位符和标签-1"><a href="#自定义占位符和标签-1" class="headerlink" title="自定义占位符和标签"></a>自定义占位符和标签</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"对象选项"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-radio</span> <span class="attr">fill-mode</span> <span class="attr">fill-label</span>=<span class="string">"Other"</span> <span class="attr">fill-placeholder</span>=<span class="string">"other"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:options</span>=<span class="string">"radio003"</span> @<span class="attr">on-change</span>=<span class="string">"change"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-radio</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
+<thead>
+<tr>
+<th>参数</th>
+<th>说明</th>
+<th>类型</th>
+<th>默认值</th>
+<th>可选值</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>value</td>
+<td>表单值，使用v-model绑定</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>options</td>
+<td>可选列表，可以用字符串组成的数组或者 <code>key=&gt;value</code> 的形式</td>
+<td><code>Array</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>fill-mode</td>
+<td>是否可填写</td>
+<td><code>Boolean</code></td>
+<td><code>false</code></td>
+<td><code>false</code>,<code>true</code></td>
+</tr>
+<tr>
+<td>fill-placeholder</td>
+<td>表单值，使用v-model绑定</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>disabled</td>
+<td>禁用操作</td>
+<td><code>Boolean</code></td>
+<td><code>false</code></td>
+<td><code>false</code>,<code>true</code></td>
+</tr>
+<tr>
+<td>selected-label-style</td>
+<td>设置选中时的<code>label</code>样式</td>
+<td><code>Object</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
+<h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
+<thead>
+<tr>
+<th>Slot名</th>
+<th>说明</th>
+<th>备注</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>each-item</td>
+<td>自定义如何显示每一项</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
+</tbody>
+</table>
 
     </div>
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/index.html">Feui介绍</a></span>
+          <span>← <a href="/docs/feui/guide/component/pullrefresh.html">Pullrefresh 刷新加载</a></span>
         
-        
-          <span style="float: right;"><a href="/docs/feui/guide/readme.html">开发指北</a> →</span>
         
       </div>
     
     <div class="footer">
       文件翻译错误或者想参与贡献?
-      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/quickstart.md" target="_blank">
+      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/radio.md" target="_blank">
         在Github编辑此页面!
       </a>
     </div>
