--- a/docs/feui/guide/component/checklist.html
+++ b/docs/feui/guide/component/checklist.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -636,6 +650,13 @@
 <td>-</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -655,6 +676,12 @@
 <td>值变化时触发</td>
 <td>-</td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <p><br></p>
@@ -672,6 +699,12 @@
 <td>getFullValue</td>
 <td>-</td>
 <td>获取值和对应的显示文字</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
