--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -504,6 +504,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link new">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -763,15 +777,7 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
-<td style="text-align:center">-</td>
-<td style="text-align:center">-</td>
-<td style="text-align:center">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:left">-</td>
-<td style="text-align:center">-</td>
-</tr>
-<tr>
-<td style="text-align:center">466</td>
+<td style="text-align:center">461</td>
 <td style="text-align:center">Pullrefresh</td>
 <td style="text-align:center">刷新加载</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html">https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html</a></td>
