:baby_bottle: edit switch

--- a/docs/feui/guide/component/radio.html
+++ b/docs/feui/guide/component/radio.html
@@ -507,7 +507,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link current new">Radio 单选按钮</a>
+      <a href="/docs/feui/guide/component/radio.html" class="sidebar-link current">Radio 单选按钮</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/switch.html" class="sidebar-link new">Switch 开关</a>
     </li>
   
     
@@ -600,7 +614,14 @@
 </tr>
 <tr>
 <td>fill-placeholder</td>
-<td>表单值，使用v-model绑定</td>
+<td>可填写时的提示文字</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>fill-label</td>
+<td>可填写时的label文字</td>
 <td><code>String</code></td>
 <td>-</td>
 <td>-</td>
@@ -656,6 +677,8 @@
         
           <span>← <a href="/docs/feui/guide/component/pullrefresh.html">Pullrefresh 刷新加载</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/switch.html">Switch 开关</a> →</span>
         
       </div>
     
